yaml/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      #nodeSelector: 
      #  key: localhost 
      #nodeName: minio #da-pc-0118 
      #
      volumes:
      - name: storage
        hostPath:
          path: /data/minio
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server
        - --console-address
        - ":9001"
        - "/storage"
        ports:
        - containerPort: 9000
          hostPort: 9000
        - containerPort: 9001
          hostPort: 9001
        volumeMounts:
        - name: storage
          mountPath: "/storage"
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    run: minio
spec:
  type: LoadBalancer 
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 30333
    #nodePort: 30333
    name: api
  - protocol: TCP
    port: 9001
    targetPort: 30334
    #nodePort: 30334
    name: ui
  selector:
    app: minio
