yaml/minio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    run: minio
spec:
  type: LoadBalancer 
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
    nodePort: 30333
    name: api
  - protocol: TCP
    port: 9001
    targetPort: 9001
    nodePort: 30334
    name: ui
  selector:
    app: minio
