yaml/k8s-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: docker.io/bitnami/minio:2022
        ports:
        - containerPort: 9000
        - containerPort: 9001
        imagePullPolicy: Always
        volumeMounts:
        - name: minio-storage
          mountPath: "/data"
      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  - name: console
    port: 9001
    targetPort: 9001
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: minio
  #namespace: default
spec:
  ingressClassName: public
  tls:
  - hosts:
    - 127.0.0.1
    secretName: microbot-ingress-tls
  rules:
  - host: 127.0.0.1
    http:
      paths:
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio-service
            port:
              number: 9000
      - path: /minio/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio-service
            port:
              number: 9001
